--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongodb": "6.13",
     "mongoose": "^8.12.1",
     "react-router-dom": "^7.1.3",
+    "redis": "^5.5.6",
     "resend": "^4.3.0"
   }
 }
